--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -12,15 +12,15 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="120dp">
 
         <ImageView
             android:id="@+id/cartItemImage"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_margin="8dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="8dp"
             android:src="@drawable/deal3" />
 
         <TextView
@@ -29,7 +29,8 @@
             android:layout_height="wrap_content"
             android:text="Item Name"
             android:layout_toEndOf="@+id/cartItemImage"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginStart="8dp"
             android:textColor="@android:color/black"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -41,6 +42,7 @@
             android:layout_toEndOf="@id/cartItemImage"
             android:layout_below="@id/cartItemName"
             android:layout_marginTop="10dp"
+            android:layout_marginStart="8dp"
             android:textColor="@android:color/black"
             android:text="Variation"/>
 
@@ -49,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="40dp"
             android:layout_marginEnd="10dp">
 
             <ImageView
@@ -97,7 +99,17 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="34dp"
             android:layout_alignParentEnd="true"
+            android:layout_marginBottom="10dp"
             android:layout_below="@id/quantityLayout"/>
+
+        <ImageView
+            android:id="@+id/deleteCartImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_cancel"
+            android:tint="@color/colorAccent"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="8dp"/>
 
     </RelativeLayout>
 
