--- a/app/src/main/res/layout/rest_item.xml
+++ b/app/src/main/res/layout/rest_item.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
     android:layout_marginTop="8dp"
+    android:layout_marginEnd="16dp"
     android:layout_marginBottom="8dp"
     app:cardCornerRadius="10dp"
     app:cardElevation="20dp">
@@ -49,11 +49,37 @@
             android:id="@+id/more_option"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="8dp"
             android:layout_below="@id/restImage"
+            android:layout_alignParentEnd="true"
             android:layout_marginTop="22dp"
-            android:src="@drawable/ic_more_menu"/>
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/ic_more_menu" />
+
+        <ImageView
+            android:id="@+id/seatIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/restImage"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="22dp"
+            android:tint="@android:color/black"
+            android:visibility="invisible"
+            android:layout_marginEnd="50dp"
+            android:src="@drawable/table_icon" />
+
+        <TextView
+            android:id="@+id/seatAvailable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/restImage"
+            android:layout_alignParentEnd="true"
+            android:textStyle="bold"
+            android:visibility="invisible"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:layout_marginTop="22dp"
+            android:layout_marginEnd="16dp"
+            android:text="0"/>
 
     </RelativeLayout>
 
