--- a/app/src/main/res/layout/activity_cart_details.xml
+++ b/app/src/main/res/layout/activity_cart_details.xml
@@ -126,6 +126,26 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/taxAmount" />
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/editText1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="18dp"
+                android:layout_marginEnd="18dp"
+                app:layout_constraintTop_toBottomOf="@+id/totalAmount">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/noOfGuestEt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Enter No. Of Guest"
+                    android:inputType="number" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
@@ -146,12 +166,12 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
-            android:id="@+id/viewCartBtn"
+            android:id="@+id/paymentBtn"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:background="@drawable/rectangle6"
-            android:text="Review Payment And Address"
+            android:text="Review Payment"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:textStyle="bold" />
